<?xml version="1.0"?>
<package format="2">
  <name>ground_filter</name>
  <version>0.0.0</version>
  <description>The ground_filter package</description>

  <maintainer email="81685394+HHorimoto@users.noreply.github.com">HHorimoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
