<?xml version="1.0"?>
<package format="2">
  <name>ground_filter</name>
  <version>0.0.0</version>
  <description>The ground_filter package</description>

  <maintainer email="81685394+HHorimoto@users.noreply.github.com">HHorimoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
